--- a/MyProject/package.json
+++ b/MyProject/package.json
@@ -11,16 +11,34 @@
     "react-native": "0.57.0"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.2",
     "@types/react": "^16.4.14",
-    "@types/react-native": "^0.56.21",
+    "@types/react-native": "^0.56.22",
+    "@types/react-test-renderer": "^16.0.2",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.45.3",
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.5.0",
+    "ts-jest": "^23.1.4",
     "typescript": "^3.0.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": [
+      "\\.snap$",
+      "<rootDir>/node_modules/"
+    ],
+    "cacheDirectory": ".jest/cache"
   }
 }
